--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,12 +9,44 @@ permissions:
   contents: write
 
 jobs:
+  changelog:
+    name: Generate changelog
+    runs-on: ubuntu-latest
+    outputs:
+      release_body: ${{ steps.git-cliff.outputs.content }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Generate a changelog
+        uses: orhun/git-cliff-action@v4
+        id: git-cliff
+        with:
+          config: cliff.toml
+          args: -vv --latest --strip header
+        env:
+          OUTPUT: CHANGELOG.md
+          GITHUB_REPO: ${{ github.repository }}
+
+      - name: Commit changelog
+        run: |
+          git config --local user.name 'github-actions[bot]'
+          git config --local user.email 'github-actions[bot]@users.noreply.github.com'
+          git add CHANGELOG.md
+          git commit -m "Update changelog"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   release:
     name: Release pushed tag
     runs-on: ubuntu-latest
+    needs: changelog
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Zig
         uses: mlugg/setup-zig@v1
@@ -23,7 +55,7 @@ jobs:
 
       - name: Build the binaries
         run: |
-          zig build
+          zig build -Dbuild-all-targets
 
       - name: Create tar.gz archives dynamically
         run: |
@@ -43,5 +75,5 @@ jobs:
           gh release create "$tag" \
               --repo="$GITHUB_REPOSITORY" \
               --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
-              --generate-notes \
+              --notes="${{ needs.changelog.outputs.release_body }}" \
               zig-out/*.tar.gz
